add interactive input taking and displaying

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <h1 id="header">This is the First project</h1>
-
+    <input type="text" name="write" id="inputField">
+    <button id="buttonField">click</button>
+    <p id="displayField"></p>
     <script src="./index.js"></script>
   </body>
 </html>
